# copier_issue

./: .gitignore  copier.yaml  pyproject.toml
