[project]
name = "copier-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4,<2.0.0",
    "bidict>=0.21.0",
    "boltons>=21.0.0",
    "click>=8.1.0",
    "copier>=9.7.0,<10.0.0",
    "dag-cbor>=0.3.3,<0.4.0",
    "deepdiff>=8.5.0,<9.0.0",
    "distro>=1.6.0",
    "dpath>=2.0.0",
    "docstring_parser>=0.15.0",
    "email-validator>=2.1.0.post1",
    "fasteners>=0.18",
    "filetype>=1.0.0,<2.0.0",
    "httpx>=0.23.0",
    "humanfriendly>=10.0",
    "importlib-metadata>=3.0.0.0",
    "jinja2>=3.0.1",
    "lz4>=4.3.0",
    "patool>=1.12",
    "pip>=25.0.0",
    "mistune>=3.0.0",
    "mmh3>=3.5.1",
    "multiformats>=0.3.1,<0.4.0",
    "multiformats-config>=0.3.1,<0.4.0",
    "networkx>=3.0,<4.0",
    "orjson>=3.8.10",
    "pp-ez>=0.2.0",
    "puremagic>=1.15",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "pytz>=2022.6",
    "pyzmq>=25.0.0",
    "regex>=2022.4.0",
    "rich>=14.0.0",
    "rich-click>=1.8.9",
    "ruamel.yaml>=0.18.0,<0.19.0",
    "sortedcontainers>=2.4.0",
    "SQLAlchemy>=2.0.20",
    "stevedore>=5.0.0,<6.0.0",
    "structlog>=21.5.0",
    "typing-extensions>=4.12.0",
    "typing-validation>=1.2.11",
    "tzlocal>=2.1,<6.0",
    "zstandard>=0.22.0",
    "airium>=0.2.7",
    "pandas"
]
